add promotion containers

--- a/index.html
+++ b/index.html
@@ -51,5 +51,57 @@
                 <button class="saved-items">Saved Items</button>
             </div>
         </div>
+
+        <div class="content">
+            <div class="left-content">
+                <img src="">
+                <h1>Member Deals Days</h1>
+                <p>Plus and Total members get savings on thousands of items, new deals every day and free 2-day shipping</p>
+                <div class="black-cirlce">
+                    <p>Ends Sunday.</p>
+                </div>
+                <button class="shop-now">Show Now</button>
+            </div>
+
+            <div class="right-content">
+
+                <div class="top-content">
+                    <div class="game-promotion-img">
+                        <img src="">
+                    </div>
+                    <div class="game-promotion-txt">
+                        <h2>
+                            Plus and Total members spend $125 on eligible video games and get a $50 bonus reward.
+                        </h2>
+                        <div class="promotion-links">
+                            <nav>
+                                <a href="">Shop Now</a>
+                                <a href="">See details</a>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bottom-content">
+                    <div class="game-promotion-img">
+                        <img src="">
+                    </div>
+                    <div class="game-promotion-txt">
+                        <h2>
+                            Plus and Total members get a $50 bonus reward with select headphones purchases $200 and up
+                        </h2>
+                        <div class="promotion-links">
+                            <nav>
+                                <a href="">Shop Now</a>
+                                <a href="">See details</a>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+                
+
+                </div>
+            </div>
+        </div>
     </body>
 
