add css styles for nav bars

--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/bestbuy-practice/style/style.css">
+        <link rel="stylesheet" href="./style/style.css">
         <title>Best Buy</title>
     </head>
 
     <body>
-        <img src="" class="promotion-deal">
+        <img src="https://tpc.googlesyndication.com/simgad/4685552183663226141" class="promotion-deal">
 
         <nav class="header">
-            <a href="https://yardbird.com/">YardBird</a>
-            <a href="https://www.bestbuy.com/site/electronics/outlet-refurbished-clearance/pcmcat142300050026.c?id=pcmcat142300050026">Best Buy Outlet</a>
-            <a href="https://www.bestbuy.com/site/electronics/bestbuy-business/pcmcat230900050001.c?id=pcmcat230900050001">Best Buy Business</a>
-            <a href="https://www.bestbuy.com/services/triage/shopping">Shop with an Expert</a>
+            <a href="https://yardbird.com/" rel="noopener noreferrer">YardBird</a>
+            <a href="https://www.bestbuy.com/site/electronics/outlet-refurbished-clearance/pcmcat142300050026.c?id=pcmcat142300050026" rel="noopener norefferer">Best Buy Outlet</a>
+            <a href="https://www.bestbuy.com/site/electronics/bestbuy-business/pcmcat230900050001.c?id=pcmcat230900050001" rel="noopener norefferer">Best Buy Business</a>
+            <a href="https://www.bestbuy.com/services/triage/shopping" rel="noopener norefferer">Shop with an Expert</a>
         </nav>
 
         <div class="search-nav">
-            <img src="https://www.bestbuy.com/">
+            <a href="https://bestbuy.com/"><img src="https://thedigitalbits.com/media/k2/items/cache/474d776bfb40e035c1895ad5d42f4773_XL.jpg"></a>
             <div class="menu">
-                <img src="">
+                <img src="https://cdn.iconscout.com/icon/free/png-512/free-hamburger-menu-462145.png?f=webp&w=512">
                 <button>Menu</button>
             </div>
             <input class="search-bar">
