--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
         </nav>
 
         <div class="search-nav">
-            <a href="https://bestbuy.com/"><img src="https://thedigitalbits.com/media/k2/items/cache/474d776bfb40e035c1895ad5d42f4773_XL.jpg"></a>
-            <div class="menu">
-                <img src="https://cdn.iconscout.com/icon/free/png-512/free-hamburger-menu-462145.png?f=webp&w=512">
-                <button>Menu</button>
-            </div>
-            <input class="search-bar">
-            <div class="location">
-                <img src="">
-                <button>Panama City</button>
-            </div>
-            <div class="cart">
-                <img src="">
-                <button>Cart</button>
+            <div class="inner-search-nav">
+                <a href="https://bestbuy.com/"><img src="https://thedigitalbits.com/media/k2/items/cache/474d776bfb40e035c1895ad5d42f4773_XL.jpg"></a>
+                <div class="menu">
+                    <img src="https://cdn.iconscout.com/icon/free/png-512/free-hamburger-menu-462145.png?f=webp&w=512">
+                    <button>Menu</button>
+                </div>
+                <input class="search-bar">
+                <div class="location">
+                    <img src="https://www.svgrepo.com/show/92091/location-placeholder.svg">
+                    <button>Panama City</button>
+                </div>
+                <div class="cart">
+                    <img src="https://png.pngtree.com/element_our/20190531/ourmid/pngtree-shopping-cart-convenient-icon-image_1287807.jpg">
+                    <button>Cart</button>
+                </div>
             </div>
         </div>
 
