top nav bars -> completed

--- a/index.html
+++ b/index.html
@@ -37,13 +37,12 @@
 
         <div class="utility">
             <div class="utility-left">
-                <a href="">Top Deals</a>
-                <a href="">Deals of the Day</a>
-                <a href="">Yes, Best Buy Sells That</a>
-                <a href="">My Best Buy Membership</a>
-                <a href="">Credit Cards</a>
-                <a href="">Gift Cards</a>
-                <button class="more">More</button>
+                <a href="https://www.bestbuy.com/site/electronics/top-deals/pcmcat1563299784494.c?id=pcmcat1563299784494">Top Deals</a>
+                <a href="https://www.bestbuy.com/site/misc/deal-of-the-day/pcmcat248000050016.c?id=pcmcat248000050016">Deals of the Day</a>
+                <a href="https://www.bestbuy.com/site/misc/yes-best-buy-sells-that/pcmcat1621542998180.c?id=pcmcat1621542998180">Yes, Best Buy Sells That</a>
+                <a href="https://www.bestbuy.com/site/electronics/best-buy-membership/pcmcat1679668833285.c?id=pcmcat1679668833285">My Best Buy Membership</a>
+                <a href="https://www.bestbuy.com/site/misc/financing-rewards/pcmcat102500050032.c?id=pcmcat102500050032">Credit Cards</a>
+                <a href="https://www.bestbuy.com/site/electronics/gift-cards/cat09000.c?id=cat09000">Gift Cards</a>
             </div>
 
             <div class="utility-right">
@@ -58,7 +57,7 @@
             <div class="left-content">
                 <img src="">
                 <h1>Member Deals Days</h1>
-                <p>Plus and Total members get savings on thousands of items, new deals every day and free 2-day shipping</p>
+                <p> Boy what the hell boy Plus and Total members get savings on thousands of items, new deals every day and free 2-day shipping</p>
                 <div class="black-cirlce">
                     <p>Ends Sunday.</p>
                 </div>
